--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gameproject">
+    package="com.goldblastgames.simonsays">
 
     <application
         android:icon="@drawable/android:star_big_on"
-        android:label="@string/app_name"
+        android:label="@string/simonsays"
         android:debuggable="true">
 
-        <activity android:label="@string/app_name" android:name=".MainActivity">
+        <activity android:label="@string/simonsays" android:name=".SimonSaysActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
